appId: com.simpledesignllc.cryptocomp
tags:
  - full
---
- runFlow:
    file: ../helpers/sign-in.yaml
    env:
      EMAIL: ${MAESTRO_TEST_EMAIL || 'returning@example.com'}
      PASSWORD: ${MAESTRO_TEST_PASSWORD || 'Test1234!'}

- tapOn: { text: "Compete" }
- tapOn: { id: "compete-top-traders-link" }
- assertVisible:
    text: "Top traders"
